Fixing the post align

--- a/29-grid-portfolio/css/components/posts.css
+++ b/29-grid-portfolio/css/components/posts.css
@@ -1,5 +1,17 @@
 .post {
-
+  display: grid;
+  grid-template-columns: repeat(6, 145px);
+  column-gap: 15px;
+  row-gap: 30px;
+  grid-template-areas:
+  "blank header header header header header"
+  "footer content content content content content";
+  margin-block-end: 2rem;
+  margin-block-start: 2rem;
+  padding-block-end: 1rem;
+}
+p {
+  margin-top: 0;
 }
 
 .post a {
@@ -7,16 +19,17 @@
 }
 
 .post header {
-
+  grid-area: header;
 }
 
 .post_content {
-
+  grid-area: content;
 }
 
 /* This element doubles as the post meta block. Links, metadata, etc */
 .post footer {
   font-size: 0.75rem;
+  grid-area: footer;
 }
 
 .post_date {
@@ -62,4 +75,10 @@
   width: 1rem;
   height: 1px;
   background-color: #4d4d4d;
+}
+main > header {
+  display: grid;
+  grid-template-columns: repeat(6, 145px);
+  column-gap: 15px;
+  row-gap: 30px;
 }
